Refactor Profile